AC_INIT([geany-code-format], [0.01], [matt@geany.org])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_SRCDIR([plugin.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AM_SILENT_RULES([yes])
LT_INIT([disable-static pic-only])
AC_PROG_CC_C99
AX_CHECK_GEANY_GTK3
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
